--- a/app/phishing.html
+++ b/app/phishing.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ethereum Phishing Detection - MetaMask</title>
+    <title>Ethereum Phishing Detection - MetaMask-CoboVault</title>
     <script src="./globalthis.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lockdown.js" type="text/javascript" charset="utf-8"></script>
     <script src="./runLockdown.js" type="text/javascript" charset="utf-8"></script>
